--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   margin: 0;
+  width: 100vw;
 }
 
 .navbar {
@@ -190,7 +191,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: auto;
   top: 0;
   z-index: 1;
   text-align: center;
@@ -301,7 +302,7 @@ h2 {
   font-size: 50px;
 }
 
-h4 {
+h3 {
   font-size: 25px;
 }
 
@@ -334,22 +335,22 @@ h4 {
 
 #project1 {
   background-color: rgb(180, 180, 180);
-  width: 250px;
-  height: 350px;
+  width: 200px;
+  height: 300px;
   margin: 10px;
 }
 
 #project2 {
   background-color: rgb(141, 141, 141);
-  width: 250px;
-  height: 350px;
+  width: 200px;
+  height: 300px;
   margin: 10px;
 }
 
 #project3 {
   background-color: rgb(109, 109, 109);
-  width: 250px;
-  height: 350px;
+  width: 200px;
+  height: 300px;
   margin: 10px;
 }
 
@@ -443,11 +444,12 @@ form {
 }
 
 #links {
-  height: 50px;
+  height: auto;
   padding: 50px;
   background-color: rgb(83, 83, 83);
 
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   font-size: 40px;
 }
@@ -460,4 +462,23 @@ form {
 
 #links i:hover {
   font-size: 45px;
+}
+
+@media screen and (max-width: 500px) {
+  h1 {
+    font-size: 50px;
+  }
+  h2 {
+    font-size: 35px;
+    text-align: center;
+  }
+  h3 {
+    text-align: center;
+  }
+  .subtitle {
+    font-size: 35px;
+  }
+  #menu {
+    width: 100vw;
+  }
 }
