--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ body {
   font-weight: 400;
   color: #e7e7e7;
   margin: 15px;
+  text-align: center;
 }
 
 .nav_profile {
@@ -218,7 +219,7 @@ h1 {
   background-color: #f5f5f5;
 }
 
-@media screen and (max-width: 1070px) {
+@media screen and (max-width: 1150px) {
   #about {
     display: block;
     height: auto;
@@ -279,28 +280,61 @@ address {
   font-size: 25px;
 }
 
-@media screen and (max-width: 1070px) {
-  #skills {
-    margin: 0 auto;
-    font-size: 20px;
-  }
-}
-
 #skills-border {
   border-left: 2px solid #c8c8c8;
   bottom: 0;
 }
 
-@media screen and (max-width: 1070px) {
+#skills-heading {
+  margin-left: 45px;
+}
+
+.icon_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 0px 40px;
+  margin: 0 40px;
+}
+
+.icons {
+  padding: 10px;
+}
+
+@media screen and (max-width: 1465px) {
+  .icon_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0px;
+    margin: 0px 25px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  #skills {
+    margin: 0 auto;
+    /* width: 500px; */
+    font-size: 20px;
+    height: 700px;
+    width: 500px;
+    padding: 0px;
+  }
+  #skills-heading {
+    margin-left: 0px;
+  }
   #skills-border {
     border-left: none;
     border-top: 2px solid #c8c8c8;
     bottom: 0;
   }
-}
-
-#skills-heading {
-  margin-left: 45px;
+  .icons {
+    padding: 15px;
+  }
+  #about-me {
+    width: 65%;
+    padding: 35px 0px 35px 35px;
+  }
 }
 
 h2 {
@@ -311,11 +345,8 @@ h3 {
   font-size: 25px;
 }
 
-.ul {
-  display: flex;
-  justify-content: space-around;
-  margin-right: 30px;
-  margin-left: 30px;
+ul {
+  list-style-type: none;
 }
 
 #portfolio {
@@ -469,7 +500,7 @@ form {
   font-size: 45px;
 }
 
-@media screen and (max-width: 1070px) {
+@media screen and (max-width: 1150px) {
   h2,
   h3,
   h4 {
@@ -484,11 +515,22 @@ form {
   h2 {
     font-size: 35px;
   }
+  h3 {
+    font-size: 20px;
+  }
 
   .subtitle {
     font-size: 35px;
   }
   #menu {
     width: 100vw;
+  }
+  #skills {
+    width: auto;
+  }
+  #about-me {
+    width: 65%;
+    padding: 35px 0px 0px 35px;
+    font-size: 15px;
   }
 }
