--- a/styles.css
+++ b/styles.css
@@ -250,23 +250,26 @@ h1 {
   text-align: justify;
 }
 
+
 .icon-heading {
+  opacity: 0%;
   position: absolute;
   background-color: #2600ff96;
   color: antiquewhite;
   padding: 4px;
   border-radius: 4px;
   font-size: 0.8em;
-  display: none;
+  transition: 0.6s;
 }
 
 .icons:hover > .icon-heading {
-  display: block;
+  opacity: 100%;
 }
 
 #html-heading {
   transform: translate(17px, -30px);
 }
+
 
 #css-heading {
   transform: translate(27px, -30px);
