--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,6 @@ h1 {
   text-align: justify;
 }
 
-
 .icon-heading {
   opacity: 0%;
   position: absolute;
@@ -269,7 +268,6 @@ h1 {
 #html-heading {
   transform: translate(17px, -30px);
 }
-
 
 #css-heading {
   transform: translate(27px, -30px);
@@ -468,7 +466,8 @@ ul {
   padding-right: 50px;
 }
 
-#golf-image, #bodyfat-image{
+#golf-image,
+#bodyfat-image {
   margin-top: 8px;
 }
 
@@ -483,21 +482,24 @@ ul {
   font-size: 20px;
 }
 
-.projectBtns{
-  background-color: #0003b4cc;
-  color: #e7e7e7;
+.projectBtns {
+  background-color: rgba(76, 88, 156, 0.205);
+  color: #3d3d3d;
   padding: 6px 12px;
   margin-right: 20px;
   border-radius: 3px;
   transition: 0.3s;
+  font-weight: bold;
+  border-color: rgba(43, 48, 71, 0.445);
 }
 
-.projectBtns:hover{
-  background-color: #000261e8;
+.projectBtns:hover {
+  background-color: rgba(43, 48, 71, 0.904);
+  color: #f3f3f3;
 }
 
 @media screen and (max-width: 1200px) {
-  .projectBtns{
+  .projectBtns {
     margin: auto;
   }
   #project1 {
