--- a/styles.css
+++ b/styles.css
@@ -157,24 +157,7 @@ body {
   color: #111;
 }
 
-@media screen and (max-width: 815px) {
-  #main {
-    margin-left: 0;
-  }
-  #resume-button {
-    display: none;
-  }
-  #work-button {
-    display: none;
-  }
-  #menu {
-    display: block;
-    position: fixed;
-  }
-  #slide-menu {
-    display: block;
-  }
-}
+
 
 #home-page {
   background-image: linear-gradient(
@@ -219,17 +202,6 @@ h1 {
   background-color: #f5f5f5;
 }
 
-@media screen and (max-width: 1150px) {
-  #about {
-    display: block;
-    height: auto;
-  }
-  #about-me {
-    margin: 0 auto;
-    padding: 35px 0px 0px 0px;
-  }
-}
-
 #about-me {
   width: 65%;
   padding: 35px 0px 0px 35px;
@@ -261,39 +233,6 @@ h1 {
   transition: 0.6s;
 }
 
-/* .icons:hover > .icon-heading {
-  opacity: 100%;
-}
-
-#html-heading {
-  transform: translate(17px, -30px);
-}
-
-#css-heading {
-  transform: translate(27px, -30px);
-}
-
-#javascript-heading {
-  transform: translate(0px, -30px);
-}
-
-#node-heading {
-  transform: translate(15px, -30px);
-}
-
-#bootstrap-heading {
-  transform: translate(-5px, -30px);
-}
-#mongo-heading {
-  transform: translate(-5px, -30px);
-}
-#git-heading {
-  transform: translate(30px, -30px);
-}
-#github-heading {
-  transform: translate(12px, -30px);
-} */
-
 address {
   display: flex;
   justify-content: space-between;
@@ -303,15 +242,6 @@ address {
 
 .contact-info {
   padding: 30px 0px 15px 0px;
-}
-
-@media screen and (max-width: 850px) {
-  address {
-    flex-direction: column;
-  }
-  .contact-info {
-    padding: 10px 0;
-  }
 }
 
 .contact-heading {
@@ -407,31 +337,6 @@ address {
   grid-area: github;
 }
 
-
-
-@media screen and (max-width: 1150px) {
-  #skills {
-    margin: 0 auto;
-    /* width: 500px; */
-    font-size: 20px;
-    height: 700px;
-    width: 500px;
-    padding: 0px;
-  }
-  #skills-heading {
-    margin-left: 0px;
-  }
-  #skills-border {
-    border-left: none;
-    border-top: 2px solid #c8c8c8;
-    bottom: 0;
-  }
-  #about-me {
-    width: 65%;
-    padding: 35px 0px 35px 35px;
-  }
-}
-
 h2 {
   font-size: 50px;
 }
@@ -465,9 +370,8 @@ ul {
 }
 
 #project1,
-#project2,
 #project3 {
-  width: 1000px;
+  width: 1200px;
   height: 335px;
   margin-bottom: 50px;
   display: flex;
@@ -480,12 +384,29 @@ ul {
 }
 
 #project1_blurb,
-#project2_blurb,
 #project3_blurb {
   height: 335px;
-  max-width: 350px;
   text-align: justify;
 }
+
+#project2 {
+  width: 1200px;
+  height: 550px;
+  margin-bottom: 50px;
+  display: flex;
+  /* flex-wrap: wrap; */
+
+  align-items: flex-start;
+  margin: 0;
+  margin-bottom: 100px;
+  padding: 0;
+}
+
+#project2_blurb {
+  height: 335px;
+  text-align: justify;
+}
+
 
 #golf-weather-app {
   height: 300px;
@@ -494,7 +415,7 @@ ul {
 #golf-image {
   background: url("/images/golf-weather\ screenshot.png") no-repeat;
   background-size: 600px 280px;
-  width: 600px;
+  width: 575px;
   height: 280px;
   object-fit: cover;
   overflow: hidden;
@@ -514,7 +435,7 @@ ul {
 #bodyfat-image {
   background: url("/images/bodyfat-calculator\ screenshot.png") no-repeat;
   background-size: 600px 280px;
-  width: 600px;
+  width: 575px;
   height: 280px;
   object-fit: cover;
   overflow: hidden;
@@ -526,7 +447,7 @@ ul {
 #web-scraper-image {
   background: url("/images/webscraper-screenshot.png") no-repeat;
   background-size: 600px 280px;
-  width: 550px;
+  width: 575px;
   height: 280px;
   object-fit: cover;
   overflow: hidden;
@@ -568,111 +489,6 @@ ul {
 .projectBtns:hover {
   background-color: rgba(43, 48, 71, 0.904);
   color: #f3f3f3;
-}
-
-@media screen and (max-width: 1270px) {
-  .projectBtns {
-    margin: auto;
-  }
-  #project1 {
-    flex-wrap: wrap;
-    flex-direction: column-reverse;
-    height: 510px;
-    align-items: center;
-    margin: 10px;
-  }
-  #project2 {
-    flex-wrap: wrap;
-    flex-direction: column-reverse;
-    height: 618px;
-    align-items: center;
-    justify-content: space-between;
-    margin: 10px;
-    padding-top: 50px;
-    margin-bottom: 50px;
-  }
-  #project3 {
-    flex-wrap: wrap;
-    flex-direction: column-reverse;
-    height: 550px;
-    align-items: center;
-    justify-content: space-between;
-    margin: 10px;
-    padding-top: 50px;
-  }
-  #project1_blurb,
-  #project2_blurb,
-  #project3_blurb {
-    height: 150px;
-    text-align: center;
-    margin-bottom: 55px;
-    min-width: 550px;
-  }
-  .project_blurbs {
-    text-align: center;
-    font-size: 17px;
-  }
-  #golf-image,
-  #bodyfat-image {
-    padding: 0;
-  }
-
-  #web-scraper-image {
-    margin-right: 0;
-  }
-  .project_blurbs > p:nth-last-of-type(2){
-    text-align: justify;
-    font-size: 17px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  #bodyfat-image,
-  #golf-image,
-  #web-scraper-image {
-    background-size: 350px 170px;
-    width: 350px;
-    height: 170px;
-  }
-  #project1_blurb {
-    min-width: 350px;
-    margin-bottom: 90px;
-  }
-
-  #project2_blurb {
-    min-width: 350px;
-    height: 270px;
-  }
-  #project3_blurb {
-    min-width: 350px;
-    height: 270px;
-  }
-
-  #project1 {
-    justify-content: space-around;
-    height: 450px;
-  }
-
-  #project2 {
-    justify-content: space-around;
-    height: 627px;
-    padding: 10px;
-  }
-  #project3 {
-    justify-content: space-around;
-    height: 627px;
-    padding: 10px;
-  }
-
-  #golf-weather-app,
-  #bodyfat-app,
-  #web-scraper-image {
-    height: 200px;
-  }
-
-  #web-scraper-image {
-    padding: 0;
-  }
 }
 
 #contact-details {
@@ -745,25 +561,7 @@ form {
   grid-gap: 10px;
 }
 
-@media screen and (max-width: 1150px) {
-  form {
-    grid-template-areas:
-      "name"
-      "email"
-      "subject"
-      "message"
-      "submit";
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  }
-  input[id="name"] {
-    justify-self: center;
-  }
-  input[id="email"] {
-    justify-self: center;
-  }
 
-}
 
 #links {
   height: auto;
@@ -786,11 +584,208 @@ form {
   font-size: 45px;
 }
 
+@media screen and (max-width: 1270px) {
+  .projectBtns {
+    margin: auto;
+  }
+  #project1 {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    height: 510px;
+    align-items: center;
+    margin: 10px;
+  }
+  #project2 {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    height: 600px;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px;
+    padding-top: 50px;
+    margin-bottom: 50px;
+  }
+  #project3 {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    height: 530px;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px;
+    padding-top: 50px;
+  }
+  #project1_blurb,
+  #project2_blurb,
+  #project3_blurb {
+    height: 150px;
+    text-align: center;
+    margin-bottom: 55px;
+    width: 575px;
+  }
+  .project_blurbs {
+    text-align: center;
+    font-size: 17px;
+  }
+  #golf-image,
+  #bodyfat-image {
+    padding: 0;
+  }
+
+  #web-scraper-image {
+    margin-right: 0;
+  }
+  .project_blurbs > p:nth-last-of-type(2){
+    text-align: justify;
+    font-size: 17px;
+  }
+}
+
 @media screen and (max-width: 1150px) {
+
   h2,
   h3,
   h4 {
     text-align: center;
+  }
+
+  #skills {
+    margin: 0 auto;
+    /* width: 500px; */
+    font-size: 20px;
+    height: 700px;
+    width: 500px;
+    padding: 0px;
+  }
+  #skills-heading {
+    margin-left: 0px;
+  }
+  #skills-border {
+    border-left: none;
+    border-top: 2px solid #c8c8c8;
+    border-bottom: 2px solid #c8c8c8;
+    padding-bottom: 100px;
+    bottom: 0;
+  }
+  #about-me {
+    width: 65%;
+    padding: 35px 0px 35px 35px;
+    margin: 0 auto;
+  }
+
+  #about {
+    display: block;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  form {
+    grid-template-areas:
+      "name"
+      "email"
+      "subject"
+      "message"
+      "submit";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  }
+  input[id="name"] {
+    justify-self: center;
+  }
+  input[id="email"] {
+    justify-self: center;
+  }
+
+}
+
+
+@media screen and (max-width: 850px) {
+  address {
+    flex-direction: column;
+  }
+  .contact-info {
+    padding: 10px 0;
+  }
+}
+
+@media screen and (max-width: 815px) {
+  #main {
+    margin-left: 0;
+  }
+  #resume-button {
+    display: none;
+  }
+  #work-button {
+    display: none;
+  }
+  #menu {
+    display: block;
+    position: fixed;
+  }
+  #slide-menu {
+    display: block;
+  }
+
+  #project1, #project2{
+    border-bottom: 2px solid #c8c8c8;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  #bodyfat-image,
+  #golf-image,
+  #web-scraper-image {
+    background-size: 350px 170px;
+    width: 350px;
+    height: 170px;
+  }
+  #project1_blurb {
+    width: 350px;
+    margin-bottom: 30px;
+  }
+
+  #project2_blurb {
+    width: 350px;
+    height: 270px;
+  }
+  #project3_blurb {
+    width: 320px;
+    height: 270px;
+    margin-bottom: 0px;
+  }
+
+  #project1 {
+    justify-content: space-around;
+    height: 450px;
+  }
+
+  #project2 {
+    justify-content: space-around;
+    height: 530px;
+    padding: 10px;
+  }
+  #project3 {
+    justify-content: space-around;
+    height: 580px;
+    padding: 10px;
+  }
+
+  #golf-weather-app,
+  #bodyfat-app,
+  #web-scraper-image {
+    height: 200px;
+  }
+
+  #web-scraper-image {
+    padding: 0;
+  }
+
+  .project_blurbs > p{
+    font-size: 13px;
+  }
+
+  #project1-p, #project2-p, #project3-p{
+    font-size: 13px;
   }
 }
 
@@ -814,6 +809,11 @@ form {
   #skills {
     width: auto;
   }
+
+  #skills-border{
+    padding-top: 100px;
+  }
+
   #about-me {
     width: 65%;
     padding: 35px 0px 0px 0px;
@@ -821,17 +821,16 @@ form {
   }
   
   #project1_blurb {
-    min-width: 200px;
-    margin-bottom: 90px;
+    width: 350px;
   }
 
   #project2_blurb {
-    min-width: 350px;
+    width: 350px;
     height: 270px;
   }
   #project3_blurb {
-    min-width: 350px;
-    height: 270px;
+    width: 350px;
+    height: 200px;
   }
 
   .icon_container {
