--- a/styles.css
+++ b/styles.css
@@ -812,13 +812,14 @@ form {
 
   #project1 {
     justify-content: space-around;
-    height: 450px;
+    height: 460px;
   }
 
   #project2 {
     justify-content: space-around;
     height: 530px;
     padding: 10px;
+    margin-bottom: 0;
   }
   #project3 {
     justify-content: space-around;
@@ -827,7 +828,7 @@ form {
   }
   #project4 {
     justify-content: space-around;
-    height: 610px;
+    height: 540px;
     padding: 10px;
   }
 
@@ -896,7 +897,7 @@ form {
   }
   #project4_blurb {
     width: auto;
-    height: 200px;
+    height: auto;
   }
 
   .icon_container {
